[package]
name = "rust-aws-s3"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.11", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.66.0"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.19"
uuid = "1.11.0"
